--- a/example/public/index.html
+++ b/example/public/index.html
@@ -9,6 +9,9 @@
             body {
                 background-color: #212121;
             }
+
+            canvas {
+            }
         </style>
     </head>
 
