--- a/example/public/index.html
+++ b/example/public/index.html
@@ -16,6 +16,7 @@
     </head>
 
     <body>
+        <div id="dummy" />
         <canvas id="drawing" width="800" height="600" />
     </body>
 </html>
